--- a/portfolio_Main_1.css
+++ b/portfolio_Main_1.css
@@ -60,15 +60,15 @@ ul{
   color: #012B55;
 }
 
-ul.group1 {
+.group1 {
   margin-top: 10%;
 }
 
-ul.group2 {
+.group2 {
   margin-top: 10%;
 }
 
-ul.group3 {
+.group3 {
   margin-top: 20%;
 }
 
